# opengl-udemy

./: .gitignore  CMakeLists.txt  conanfile.txt
apps/: CMakeLists.txt  OpenGLUdemy.cpp  app.cpp
include/: CoreOpenGLUdemy.h
scripts/: clean.sh  init.sh
src/: CMakeLists.txt  CoreOpenGLUdemy.cpp  OpenGLUdemy.cpp  config.h.in  main.cpp
